--- a/twoparacol.sty
+++ b/twoparacol.sty
@@ -14,7 +14,7 @@
 \definecolor{yellower}{RGB}{238,232,170} % for testing purposes
 \definecolor{lightblueer}{rgb}{0.8,1,1} % for testing purposes
 % lengths
-\newlength{\leftsidemargin}\setlength{\leftsidemargin}{\dimexpr\oddsidemargin+1in\relax}%
+\newlength{\leftsidemargin}
 
 % define (non-static) variables, which will be set by definekeys
 \newlength{\leftcolfullwidth}
@@ -24,6 +24,7 @@
 \newif\iftp@debug
 
 % set default values for variables
+\setlength{\leftsidemargin}{\dimexpr\oddsidemargin+1in\relax}%
 \setlength\leftcolfullwidth{\dimexpr\paperwidth/3\relax}
 \setlength\leftcolrightmargin{\dimexpr\leftsidemargin/2\relax}
 \setlength\rightcolleftmargin{\dimexpr\leftsidemargin/2\relax}
@@ -51,6 +52,7 @@
 % helper function to apply the settings
 \newcommand{\applysettings}{
   % define helper lengths
+  \setlength{\leftsidemargin}{\dimexpr\oddsidemargin+1in\relax}%
   \setlength{\paracolsep}{\dimexpr\leftcolrightmargin+\rightcolleftmargin\relax}%
   \setlength{\paracolwidth}{\dimexpr\leftcolfullwidth-\leftsidemargin-\leftcolrightmargin\relax}%
   % apply paracols \setcolumnwidth
